# xiqual-svn

lib/: API  MANIFEST  Makefile.am  Makefile.in  README_SCONS  SConstruct  autogen.sh  config.h  config.h.in  configure  configure.in  library.xml  minimalgui.c  prefs.c  prefs.prefs  sink.xml  stest  tagtest.c  tilefont.c  tileset.c  xiqual-config.in  xiqualrc  xmltest.c
lib/VisualC/: Compiling.txt  Xiqual.dsw  Xiqual_all.dsp  Xiqual_all.dsw  ifftest.dsp  ifftest.dsw  iffwrite.dsw  lui.dsp  lui.dsw  minimalgui.dsp  xicgi.dsw  xinet.dsw  xitools.dsw
lib/html/: HashNode.html  HashTable.html  IFFHandle.html  MD5Context.html  MD5Init.html  MD5Sum.html  MD5checksumming.html  Node.html  OptNode.2.html  Optargs.html  Stringtokeniser.html  Views.html  XI_VARARG.html  XI_VOIDARG.html  XMLfunctions.html  bt_new.html  cfg_findsection.html  cfg_findvar.html  cfg_freevar.html  cfg_isbool.html  cfg_loadprefs.html  crc32_calc.html  file_getsize.html  file_new.html  file_readhook.html  file_seek.html  hash_free.html  hash_newnode.html  iarea_check.html  iarea_new.html  iff_correctchunk.html  index.html  inputarea.html  list_add.html  list_addhead.html  list_getnode.html  list_nodeend.html  list_nodemakecircular.html  list_nodestart.html  lui_addgadget.html  (+53 more)
lib/include/: Makefile.am  fonts.h  iarea.h  iffparse.h  lui.h  lui_msg.h  prefs.h  strsplit_array.h  things.h  views.h  xicommon.h  xiendian.h  xinet.h  xios.h  xiqual.h  xisetup.h  xitags.h  xitiles.h
lib/lui/: SConscript  button.c  list.c  lui.c  msgbox.c
lib/sprite/: narya.iff
lib/xigfx/: SConscript  fonts.c  iarea.c  tiles.c  views.c  xi_init.c  xi_main.c
lib/xinet/: Makefile.am  SConscript  net_accept.c  net_addnodes.c  net_client.c  net_process.c  net_remove_client.c  net_server.c  net_server_free.c  net_tag_server.c  net_write.c
lib/xisnd/: Makefile.in  SConscript  play.c
lib/xitools/: Makefile.am  Makefile.in  SConscript  cfg_findnext.c  cfg_findsection.c  cfg_findvar.c  cfg_freesection.c  cfg_isbool.c  cfg_mapfromenv.c  crc32.c  file_getsize.c  files.c  hash_merge.c  idtostr.c  iff_check.c  iff_close.c  iff_correctchunk.c  iff_goodid.c  iff_new.c  iff_readchunkdata.c  iff_readchunkheader.c  iff_rewind.c  iff_skipchunkdata.c  iff_writechunkdata.c  list_add.c  list_addhead.c  list_delete.c  list_makecircular.c  list_newitem.c  md5sum.c  node_end.c  node_findbycontents.c  node_findbyname.c  str_getvalue.c  strfind.c  strisnum.c  strlower.c  strsplit.c  strtokenise.c  strupper.c  (+6 more)
trunk/: AUTHORS  BUGS  CREDITS  Changes  GAMES  GUI  INSTALL  Makefile  Makefile.am  Makefile.in  PORTS  README  TODO  cgi  cgi.c  classHeader.inc  classHeader.inc.in  config.cache  config.h  config.status  configure  configure.in  crc  crc.c  hashtest  hashtest.c  hello.xhtml  ifftest  ifftest.c  iffwrite  iffwrite.c  indexHeader.inc  indexHeader.inc.in  makefont.c  md5  md5.c  minimalgui  mkinstalldirs  num.c  prefs  (+21 more)
trunk/VisualC/: README.txt  iffwrite.dsp  md5.dsp  md5.dsw  minimalgui.dsw  prefs.dsp  prefs.dsw  tileset.dsp  tileset.dsw  xicgi.dsp  xigfx.dsp  xigfx.dsw  xinet.dsp  xitools.dsp
trunk/debian/: README.debian  changelog  control  copyright  files  rules  shlibs  substvars
trunk/font/: font.def  gnat.iff
trunk/html/: General.html  Inputhandling.html  LUICorefunctions.html  List.html  Loadingandhandlingtilesets.html  MAKE_ID.html  MD5Ascii.html  MD5Final.html  MD5Update.html  OptNode.html  Questionsandanswers..html  Settingupgraphics.html  Xiqualexampleprograms.html  aspec.html  autofile.html  cfg_findnext.html  cfg_freesection.html  cfg_newsection.html  cfg_saveprefs.html  crc32_update.html  divclasskeywordAutofilesspanSomewhatsimplerloadingoffilesspandiv.html  divclasskeywordHashtablefunctionsspanFastlookupspandiv.html  divclasskeywordXiqualtoolsspanToolsusedtocreatedatafilesspandiv.html  file_free.html  file_initbuf.html  file_load.html  file_read.html  file_scan.html  gadget.html  hash_add.html  hash_addnode.html  hash_find.html  hash_freenode.html  hash_merge.html  hash_new.html  hash_newfromlist.html  iarea_free.html  iff_close.html  iff_endchunk.html  iff_new.html  (+63 more)
trunk/include/: Makefile  Makefile.in  files.h  fonts.h  hash.h  iarea.h  lists.h  lui.h  lui_button.h  lui_list.h  lui_msg.h  md5sum.h  xiarray.h  xicgi.h  xiopts.h  xisetup.h  xistr.h  xixml.h
trunk/lui/: Makefile  Makefile.am  Makefile.in  lui.c
trunk/sprite/: README  narya.t
trunk/templates/: Makefile  footer.c  header.c  lui.c  nolui.c
trunk/xicgi/: Makefile  Makefile.am  Makefile.in  cgi_checkform.c  cgi_clearcookie.c  cgi_end.c  cgi_expiry.c  cgi_findval.c  cgi_form.c  cgi_freecookie.c  cgi_getcookie.c  cgi_html.c  cgi_include.c  cgi_init.c  cgi_setcookie.c  cgi_unescape.c  cgi_validator.c
trunk/xigfx/: Makefile  Makefile.am  Makefile.in  fonts.c  xi_main.c
trunk/xinet/: Makefile  Makefile.in  net_client_free.c  net_create_server.c  net_free_server.c  net_handle.c  net_newclient.c  net_read.c  net_setnonblock.c
trunk/xisnd/: Makefile  Makefile.am  Makefile.in
trunk/xithings/: Makefile  Makefile.am  Makefile.in
trunk/xitools/: Makefile  Makefile.in  cfg_freevar.c  cfg_loadprefs.c  cfg_newsection.c  cfg_newvar.c  cfg_saveprefs.c  errors.c  ftr.c  hash.c  hash_newfromlist.c  iff_endchunk.c  iff_endsubform.c  iff_fixsize.c  iff_goodtype.c  iff_newchunk.c  iff_newsubform.c  iff_open.c  iffp_new.c  list_free.c  list_getnode.c  list_insert.c  list_new.c  list_remove.c  mem_arrayget.c  mem_arrayset.c  node_makecircular.c  node_start.c  opts.c  tag_alloclist.c  tag_freelist.c  xml_printesc.c  xmlread.c  xmlwrite.c
